fixed the routes of the files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 	<head>
 		<title>Christian Rodriguez</title>
-		<link rel="stylesheet" type="text/css" href="CSS.css">
-		<link rel="Shortcut Icon" href="CR.ico" type="image/x-icon" />		
+		<link rel="stylesheet" type="text/css" href="assets/css/CSS.css">
+		<link rel="Shortcut Icon" href="assets/icons/CR.ico" type="image/x-icon" />		
 	</head>	
 	<body>
 		<header>
@@ -28,7 +28,7 @@
 					<a name="home" id="home"></a>
 				</div>
 				<div id="homeImag"><a href="#whoIAm">			
-					<img id="imagHome" src="pictures/technology6.png"></a>					
+					<img id="imagHome" src="assets/images/technology6.png"></a>					
 					<a name="whoIAm" id="whoIAm"></a>
 				</div>
 			</div>
@@ -39,12 +39,12 @@
 					<h2>TECHNOLOGIST</h2>										
 				</div>
 				<div id="tecImag">
-					<img id="imag0" src="pictures/technology6.jpg">					
+					<img id="imag0" src="assets/images/technology6.jpg">					
 				</div>				
 			</div>
 			<div id="divCre">
 				<div id="creImag">
-					<img id="imagCre" src="pictures/creative1.png">					
+					<img id="imagCre" src="assets/images/creative1.png">					
 				</div>
 				<div id="creative">																
 					<h2>I Am</h2>
@@ -57,12 +57,12 @@
 					<h2>Developer</h2>										
 				</div>
 				<div id="webImag">
-					<img id="imag1" src="pictures/web.png">											
+					<img id="imag1" src="assets/images/web.png">											
 				</div>				
 			</div>
 			<div id="divAndroid">
 				<div id="androidImag">
-					<img id="imag2" src="pictures/android.png">					
+					<img id="imag2" src="assets/images/android.png">					
 				</div>
 				<div id="androidDev">																				
 					<h2>Android</h2>
@@ -79,12 +79,12 @@
 					<h2>HOBBIES</h2>
 				</div>
 				<div id="hobImag">
-					<img id="imagHob" src="pictures/hobbies2.jpg">
+					<img id="imagHob" src="assets/images/hobbies2.jpg">
 				</div>				
 			</div>
 			<div id="divChess">
 				<div id="chessImag">
-					<img id="imagCre" src="pictures/chess2.png">					
+					<img id="imagCre" src="assets/images/chess2.png">					
 				</div>
 				<div id="chess">																
 					<h2>I Play</h2>
@@ -97,12 +97,12 @@
 					<h2>Video Games</h2>										
 				</div>
 				<div id="vgImag">
-					<img id="imagVg" src="pictures/videogames1.png">					
+					<img id="imagVg" src="assets/images/videogames1.png">					
 				</div>				
 			</div>
 			<div id="divRun">
 				<div id="runImag">
-					<img id="imagRun" src="pictures/run1.png">					
+					<img id="imagRun" src="assets/images/run1.png">					
 				</div>
 				<div id="run">																
 					<h2>I Like</h2>
@@ -115,7 +115,7 @@
 					<h2>Pictures</h2>										
 				</div>
 				<div id="camImag">
-					<img id="imagCam" src="pictures/cam1.png">					
+					<img id="imagCam" src="assets/images/cam1.png">					
 				</div>				
 			</div>
 			<div id="divCon">
@@ -124,7 +124,7 @@
 					<h2>Contact</h2>
 				</div>
 				<div id="conImag">
-					<img id="imagCon" src="pictures/contact1.jpg">
+					<img id="imagCon" src="assets/images/contact1.jpg">
 				</div>				
 			</div>	
 			
